<resources>
    <string name="app_name">Digikala</string>
    <string name="my_digikala">دیجیکالای من</string>
    <string name="home">خانه</string>
    <string name="grouping">دسته بندی ها</string>
    <string name="shop_basket">سبد خرید</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">جدیدترین ها</string>
    <string name="see_more">مشاهده همه</string>
    <string name="login_sentence">برای ورود و با ثبت نام در دیجی کالا پست الکترونیکی خود را وارد نمایید</string>
    <string name="digi_login_rules">با ورود یا ثبت نام در دیجی‌کالا شما شرایط و قوانین استفاده از سرویس های سایت دیجی‌کالا و قوانین حریم خصوصی آن را می پذیرید.</string>
    <string name="most_view">پر بازدیدترین ها</string>
    <string name="most_rate">بیشترین امتیاز</string>
    <string name="about_product">درباره کالا</string>
    <string name="add_to_basket">افزودن به سبد خرید</string>
    <string name="toman">تومان</string>
    <string name="Digital">دیجیتال</string>
    <string name="Clothing">مد و پوشاک</string>
    <string name="SpecialSale">فروش ویژه</string>
    <string name="SuperMarket">سوپرمارکت</string>
    <string name="BookArt">کتاب و هنر</string>
    <string name="Health">بهداشت</string>
    <string name="no_sub_category">زیر مجموعه ای وجود ندارد</string>
    <string name="Search_in_digikala">سرچ در دیجیکالا</string>
    <string name="cart_product">سبد خرید</string>
    <string name="no_net">اینترنت در دسترس نیست... دوباره تلاش کنید</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="password">رمز عبور</string>
    <string name="personal_information">اطلاعات شخصی</string>
    <string name="txt_continue">ادامه</string>
    <string name="shipping_info">اطلاعات ارسال کالا</string>
    <string name="txt_country">کشور</string>
    <string name="txt_city">شهر</string>
    <string name="state">استان</string>
    <string name="address_one">آدرس اول</string>
    <string name="post_code">کد پستی</string>
    <string name="off">خاموش</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAdfE8An_g7e4bMMVd0ToVIKH2laZedI2o</string>
</resources>