<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">





    <item
        android:id="@+id/nav_homeFragment"
        android:icon="@drawable/home_selector"
        android:title="@string/home"
        />
    <item
        android:id="@+id/nav_categoryFragment"
        android:icon="@drawable/grouping_selector"
        android:title="@string/grouping"
        />
    <item
        android:id="@+id/fragment_basket"
        android:icon="@drawable/basket_selector"
        android:title="@string/shop_basket" />

    <item
        android:id="@+id/choosingCustomerFragment"
        android:icon="@drawable/my_digikala_selector"
        android:title="@string/my_digikala"
        />
</menu>