<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.CategoryFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Digital_see_more_text"
                        style="@style/textViewSeeMore" />

                    <TextView
                        android:id="@+id/textView_Digital_title"
                        android:text="@string/Digital"
                        style="@style/textViewTitle" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_digital_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView_empty_Digital"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_add_basket_background"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/no_sub_category"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/SpecialSale_see_more_text"
                        style="@style/textViewSeeMore" />

                    <TextView
                        android:id="@+id/SpecialSale_Clothing_title"
                        android:text="@string/SpecialSale"
                        style="@style/textViewTitle" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_specialSale_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </androidx.recyclerview.widget.RecyclerView>
                <TextView
                    android:id="@+id/textView_empty_special_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_add_basket_background"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/no_sub_category" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Clothing_see_more_text"
                        style="@style/textViewSeeMore" />

                    <TextView
                        android:id="@+id/textView_Clothing_title"
                        android:text="@string/Clothing"
                        style="@style/textViewTitle" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_clothing_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView_empty_clothing"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_add_basket_background"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/no_sub_category" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/SuperMarket_see_more_text"
                        style="@style/textViewSeeMore" />

                    <TextView
                        android:id="@+id/SuperMarket_Clothing_title"
                        android:text="@string/SuperMarket"
                        style="@style/textViewTitle" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_SuperMarket_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </androidx.recyclerview.widget.RecyclerView>
                <TextView
                    android:id="@+id/textView_empty_super_market"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_add_basket_background"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/no_sub_category" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/BookArt_see_more_text"
                        style="@style/textViewSeeMore" />

                    <TextView
                        android:id="@+id/BookArt_Clothing_title"
                        android:text="@string/BookArt"
                        style="@style/textViewTitle" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_BookArt_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView_empty_art"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_add_basket_background"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/no_sub_category" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Health_see_more_text"
                        style="@style/textViewSeeMore" />

                    <TextView
                        android:id="@+id/textView_Health_title"
                        android:text="@string/Health"
                        style="@style/textViewTitle" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_Health_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </androidx.recyclerview.widget.RecyclerView>
                <TextView
                    android:id="@+id/textView_empty_health"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_add_basket_background"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/no_sub_category" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>