<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_search_toolbar"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:padding="8dp"
                android:text="سرچ در دیجیکالا"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_search_1" />

        </LinearLayout>

    </android.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_see_more_text"
                    style="@style/textViewSeeMore" />

                <TextView
                    android:id="@+id/textView_news_title"
                    android:text="@string/news"
                    style="@style/textViewTitle"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_product_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DD0451"
                android:orientation="vertical">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/most_view_see_more_text"
                    style="@style/textViewSeeMore"/>

                <TextView
                    android:id="@+id/textView_popular_title"
                    style="@style/textViewTitle"
                    android:text="@string/most_view"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/most_review_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#61CF04"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/most_rate_see_more_text"
                    style="@style/textViewSeeMore" />

                <TextView
                    android:id="@+id/textView_rating_title"
                    android:text="@string/most_rate"
                    style="@style/textViewTitle" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/most_rate_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1F5CC3"
                android:orientation="horizontal" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>